# GSM2SIP

./: .gitignore  CMakeLists.txt  Doxyfile  Doxyfile.bak  README.md  config.example.json  mainpage.md
.github/workflows/: doxygen.yml
include/: CallState.hpp  GsmCallDetector.hpp  SipClient.hpp
src/: CallState.cpp  GsmCallDetector.cpp  SipClient.cpp  main.cpp
